--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL}
+spring.mail.password=${SENHA}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
